# Kan2Arabic

./: Kan2Arabic.cabal  README.md
src/: Main.hs
